[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "reprexlite"
version = "1.0.0"
description = "Render reproducible examples of Python code for sharing."
readme = "README.md"
authors = [{ name = "Jay Qi", email = "jayqi.opensource@gmail.com" }]
license = { file = "LICENSE" }
keywords = ["reprex", "reproducible examples"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = [
  "cyclopts>=3",
  "libcst",
  "platformdirs",
  "typing_extensions>4 ; python_version < '3.11'",
]

[project.optional-dependencies]
black = ["black"]
pygments = ["Pygments"]
ipython = ["ipython"]

[project.scripts]
reprex = "reprexlite.cli:entrypoint"

[project.urls]
"Repository" = "https://github.com/jayqi/reprexlite"
"Documentation" = "https://jayqi.github.io/reprexlite/"
"Bug Tracker" = "https://github.com/jayqi/reprexlite/issues"
"Changelog" = "https://jayqi.github.io/reprexlite/stable/changelog/"

[dependency-groups]
dev = [
  { include-group = "lint" },
  { include-group = "docs" },
]
lint = [
  "mypy[install-types]",
  "ruff",
]
docs = [
  "markdown-callouts",
  "mkdocs",
  "mkdocs-jupyter",
  "mkdocs-macros-plugin",
  "mkdocs-material",
  "mike",
  "mkdocstrings[python]",
  "mdx-truly-sane-lists",
  "py-markdown-table",
  "typenames",
  "vspect",
]
test = [
  "pytest",
  "coverage",
  "pytest-cov",
  "pytest-echo>=1.8.1",
  "tqdm",
]

[tool.uv]
upgrade = true
resolution = "highest"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | tests/assets
)/
'''

[tool.ruff]
line-length = 99
src = ["reprexlite", "tests"]
exclude = ["tests/assets"]

[tool.ruff.lint]
select = [
  "E", # Pyflakes
  "F", # Pycodestyle
  "I", # isort
]
unfixable = ["F"]

[tool.ruff.lint.isort]
known-first-party = ["reprexlite"]
known-third-party = ["IPython"]
force-sort-within-sections = true

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=reprexlite --cov-report=term --cov-report=html --cov-report=xml --echo-version=*"
testpaths = ["tests"]

[tool.coverage.run]
source = ["reprexlite"]

[tool.coverage.paths]
source = [
  "reprexlite/",
  "*/site-packages/reprexlite/",
]
